[package]
name = "xml_schema_macro"
version = "0.1.0"
edition = "2021"
description = "Demo procedural macro that generates a domain layer from XML schema"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
roxmltree = "0.20"
heck = "0.5"
